Added more js codes.